<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="version_text" formatted="false">Version %s</string>
    <string name="app_name">Trento Bus</string>
    <string name="app_title">Trento Bus Schedule</string>
	<string name="date_format">dd/MM/yyyy</string>
    
    <string name="error_cannot_load_schedule_index">Cannot load schedule index</string>
    <string name="choose_timetable">Choose timetable</string>
    <string name="view_schedule_title" formatted="false">%s: %s</string>
    <string name="schedule_is_not_yet_valid">Schedule data is not valid yet.</string>
    <string name="schedule_is_out_of_date">Schedule data is out of date. Please update the application.</string>

    <string name="schedule_type_workday">Workday</string>
    <string name="schedule_type_holiday">Holiday</string>
    
    <!-- Frequency descriptions for legend -->
    <string name="freq_nothing_special">Normal route, nothing special.</string>
    <string name="freq_autonoleggiatore_privato">Performed by a private carrier</string>
    <string name="freq_funivia_bus">Performed by a bus (in case of strong wind)</string>
    <string name="freq_funivia_bici">Bike transport service</string>
    <string name="freq_funivia_sospesa_festivi">Suspended on 5-6 April, 1 May, 2 June</string>
    <string name="freq_mezzo_extraurbano">Performed by a suburban (extraurbano) bus</string>
    <string name="freq_feriale_solo_sabato">Only on Saturdays</string>
    <string name="freq_feriale_lunedi_a_venerdi">Monday to Friday</string>
    <string name="freq_scolastica_lunedi_a_sabato">School bus, Monday to Saturday</string>
    <string name="freq_scolastica_lunedi_a_venerdi">School bus, Monday to Friday</string>
    <string name="freq_lun_ven_sospesa_2307_0209">Suspended Monday to Friday, from 23/07 to 02/09</string>
    <string name="freq_gazzoleti_canova_linea_7">From Gazzoletti to Canova bus 7</string>
    <string name="freq_unknown"></string>
    <string name="menu_show_legend">View legend</string>
    <string name="schedule_legend">Schedule legend</string>
    <string name="menu_about">About</string>
    
    <string name="about_activity_title">About TrentoBus</string>
    <string name="schedule_validity" formatted="false">From %s to %s</string>
    <string name="copyright">©2012-2015 Andrei Popleteev</string>
    <string name="check_for_update">Check for update</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="about_logo_description">Application logo</string>
    <string name="market_not_available">Sorry, Android Market is not available.</string>
    
    <string name="eula_title">License agreement</string>
    <string name="eula_text">This software is provided by the author \'as is\' and any express or implied warranties, including, but not limited to, the implied warranties of merchantability and fitness for a particular purpose are disclaimed. In no event shall the author be liable for any direct, indirect, incidental, special, exemplary, or consequential damages however caused and on any theory of liability, whether in contact, strict liability, or tort (including negligence or otherwise) arising in any way out of the use of this software, even if advised of the possibility of such damage.</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_reject">Decline</string>
</resources>