<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/title"
        android:src="@drawable/app_logo" 
        android:contentDescription="@string/about_logo_description"/>
    
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/validity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/schedule_validity" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/validity"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/version_text" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_bar"
        android:layout_marginBottom="5dp"
        android:text="@string/copyright" />
    
    <LinearLayout android:id="@+id/button_bar"  
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:background="@android:drawable/bottom_bar" 
        android:layout_alignParentBottom="true" 
        android:paddingTop="5.0dip" android:paddingRight="4.0dip"
        android:paddingBottom="1.0dip" android:paddingLeft="4.0dip"
        android:orientation="horizontal">
        <Button android:id="@+id/update_button" 
            android:text="@string/check_for_update"
            android:layout_width="0.0dip" android:layout_height="wrap_content" 
            android:layout_weight="1.0" />
        <Button android:id="@+id/rate_button" 
            android:layout_width="0.0dip" android:layout_height="wrap_content" 
            android:text="@string/rate_this_app"
            android:layout_weight="1.0" />
    </LinearLayout>
    
</RelativeLayout>